# temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs/: __init__.py
src/temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs/evaluation/: __init__.py  metrics.py
src/temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs/training/: __init__.py  exceptions.py  trainer.py
src/temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
