[build-system]
requires = ["hatchling>=1.13.0"]
build-backend = "hatchling.build"

[project]
name = "temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs"
version = "1.0.0"
description = "Predicts adverse drug-drug interactions by modeling molecular structures as heterogeneous graphs with temporal attention mechanisms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Drug Interaction Prediction Team", email = "team@example.com"}
]
keywords = [
    "machine-learning",
    "graph-neural-networks",
    "drug-discovery",
    "bioinformatics",
    "temporal-attention",
    "heterogeneous-graphs",
    "pharmacovigilance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "networkx>=2.8",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.7.0",
    "rdkit>=2022.9.1",
    "mlflow>=2.0.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.971"
]
docs = [
    "sphinx>=5.1.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0"
]
notebooks = [
    "jupyterlab>=3.4.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.15.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0"
]
chemistry = [
    "deepchem>=2.7.0",
    "ogb>=1.3.6"
]
all = [
    "temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs[dev,docs,notebooks,chemistry]"
]

[project.urls]
Homepage = "https://github.com/username/temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs"
Repository = "https://github.com/username/temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs.git"
Documentation = "https://temporal-drug-interaction-prediction-with-heterogeneous-molecular-graphs.readthedocs.io"

[project.scripts]
train-drug-interaction = "temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs.scripts.train:main"
evaluate-drug-interaction = "temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs.scripts.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "scripts/",
    "configs/",
    "notebooks/",
    "README.md",
    "LICENSE",
    "requirements.txt"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "notebooks/*",
    "**/__pycache__/*",
    "**/.*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 100
skip-string-normalization = false
extend-exclude = '''
/(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )/
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["temporal_drug_interaction_prediction_with_heterogeneous_molecular_graphs"]
known_third_party = [
    "torch",
    "torch_geometric",
    "dgl",
    "networkx",
    "numpy",
    "pandas",
    "sklearn",
    "scipy",
    "rdkit",
    "mlflow",
    "matplotlib",
    "yaml",
    "tqdm",
    "pytest"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch_geometric.*",
    "dgl.*",
    "rdkit.*",
    "deepchem.*",
    "ogb.*",
    "mlflow.*",
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "F401",  # imported but unused (handled by isort)
]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv"
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
    "tests/*:S101",      # Allow assert statements in tests
]